--- a/TimedHostedServiceExample.csproj
+++ b/TimedHostedServiceExample.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.6"/>
   </ItemGroup>
 </Project>
